tests/reference/asr-continue_compilation_2-a6145a1.stderr
syntax error: End module name does not match module name
  --> tests/errors/continue_compilation_2.f90:20:1 - 22:28
   |
20 |    module my_module
   |    ^^^^^^^^^^^^^^^^...
...
   |
22 |    end module wrong_module_name
   | ...^^^^^^^^^^^^^^^^^^^^^^^^^^^^ 

syntax error: End subroutine name does not match subroutine name
  --> tests/errors/continue_compilation_2.f90:44:5 - 46:33
   |
44 |        subroutine my_subroutine1()
   |        ^^^^^^^^^^^^^^^^^^^^^^^^^^^...
...
   |
46 |        end subroutine different_name
   | ...^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ 

syntax error: End function name does not match function name
  --> tests/errors/continue_compilation_2.f90:48:5 - 51:32
   |
48 |        function my_function() result(res)
   |        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^...
...
   |
51 |        end function not_my_function
   | ...^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ 

syntax error: End subroutine name does not match subroutine name
  --> tests/errors/continue_compilation_2.f90:53:5 - 55:33
   |
53 |        subroutine my_subroutine2()
   |        ^^^^^^^^^^^^^^^^^^^^^^^^^^^...
...
   |
55 |        end subroutine different_name 
   | ...^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ 

syntax error: Invalid syntax for variable initialization (try inserting '::' after the type)
   --> tests/errors/continue_compilation_2.f90:102:5
    |
102 |     integer init_x = 1
    |     ^^^^^^^^^^^^^^^^^^ 

syntax error: kind 16 is not supported yet.
   --> tests/errors/continue_compilation_2.f90:192:5
    |
192 |     real*16 :: unsupported_kind
    |     ^^^^^^^ 

tokenizer error: Token '?' is not recognized
   --> tests/errors/continue_compilation_2.f90:198:17
    |
198 |     integer  :: ? tokenizer_error
    |                 ^ token not recognized

tokenizer error: Token '@' is not recognized in `format` statement
   --> tests/errors/continue_compilation_2.f90:437:21
    |
437 |     100 FORMAT(A10, @)
    |                     ^ 

semantic error: Global name is already being used
  --> tests/errors/continue_compilation_2.f90:24:1 - 25:21
   |
24 |    subroutine myname
   |    ^^^^^^^^^^^^^^^^^...
...
   |
25 |    end subroutine myname
   | ...^^^^^^^^^^^^^^^^^^^^^ 'myname' defined here
   |
27 |    block data myname
   |    ^^^^^^^^^^^^^^^^^...
...
   |
29 |    
   | ...^ 'myname' defined here again

semantic error: Duplicate DIMENSION attribute specified
  --> tests/errors/continue_compilation_2.f90:35:24
   |
35 |         common /rowns/ rowns(209)
   |                        ^^^^^^^^^^ 

semantic error: Dummy argument 'a' not defined
  --> tests/errors/continue_compilation_2.f90:57:5 - 59:36
   |
57 |        SUBROUTINE faulty_subroutine(a, b, c)
   |        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^...
...
   |
59 |        END SUBROUTINE faulty_subroutine
   | ...^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ 

semantic error: Dummy argument 'b' not defined
  --> tests/errors/continue_compilation_2.f90:57:5 - 59:36
   |
57 |        SUBROUTINE faulty_subroutine(a, b, c)
   |        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^...
...
   |
59 |        END SUBROUTINE faulty_subroutine
   | ...^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ 

semantic error: Dummy argument 'c' not defined
  --> tests/errors/continue_compilation_2.f90:57:5 - 59:36
   |
57 |        SUBROUTINE faulty_subroutine(a, b, c)
   |        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^...
...
   |
59 |        END SUBROUTINE faulty_subroutine
   | ...^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ 

semantic error: Implicit typing is not allowed, enable it by using --implicit-typing 
  --> tests/errors/continue_compilation_2.f90:97:5 - 99:49
   |
97 |        implicit real(a-z)
   |        ^^^^^^^^^^^^^^^^^^...
...
   |
99 |        ! Put declarations below without empty lines
   | ...^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ 

semantic error: `parameter` attribute conflicts with `pointer` attribute
   --> tests/errors/continue_compilation_2.f90:100:5
    |
100 |     integer, pointer, parameter :: v => null()
    |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ 

semantic error: `parameter` attribute conflicts with `allocatable` attribute
   --> tests/errors/continue_compilation_2.f90:101:5
    |
101 |     integer, allocatable, parameter :: v=1
    |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ 

semantic error: `kind` argument of `int` intrinsic must be a scalar
   --> tests/errors/continue_compilation_2.f90:162:54
    |
162 |     integer(8), parameter :: ar1(3) = int([1, 2, 3], [8, 8, 8])
    |                                                      ^^^^^^^^^ 

semantic error: `kind` argument of `int` intrinsic must be a scalar
   --> tests/errors/continue_compilation_2.f90:164:54
    |
164 |     integer(8), parameter :: ar2(3) = int([1, 2, 3], [8, 8, 8])
    |                                                      ^^^^^^^^^ 

semantic error: Only Integer literals or expressions which reduce to constant Integer are accepted as kind parameters
   --> tests/errors/continue_compilation_2.f90:166:13
    |
166 |     integer(4.2) :: ifoix
    |             ^^^ 

semantic error: Kind 6 is not supported for Complex
   --> tests/errors/continue_compilation_2.f90:168:13
    |
168 |     complex(6) :: iiocx
    |             ^ 

semantic error: Kind 3 is not supported for Integer
   --> tests/errors/continue_compilation_2.f90:170:13
    |
170 |     integer(3) :: iifix
    |             ^ 

semantic error: Kind 10 is not supported for Logical
   --> tests/errors/continue_compilation_2.f90:172:13
    |
172 |     logical(10) :: iiolx
    |             ^^ 

semantic error: Expected initialization expression for kind
   --> tests/errors/continue_compilation_2.f90:174:13
    |
174 |     complex(*) :: ksoca
    |             ^ 

semantic error: Expected initialization expression for kind
   --> tests/errors/continue_compilation_2.f90:176:13
    |
176 |     integer(*) :: ksoia
    |             ^ 

semantic error: Expected initialization expression for kind
   --> tests/errors/continue_compilation_2.f90:178:13
    |
178 |     logical(*) :: ksola
    |             ^ 

semantic error: Only Integer literals or expressions which reduce to constant Integer are accepted as kind parameters
   --> tests/errors/continue_compilation_2.f90:180:13
    |
180 |     integer('a') :: ksoix
    |             ^^^ 

semantic error: Parameter 'kvoia' is a variable, which does not reduce to a constant expression
   --> tests/errors/continue_compilation_2.f90:183:10
    |
183 |     real(kvoia) :: kvoix
    |          ^^^^^ 

semantic error: Symbol is already declared in the same scope
   --> tests/errors/continue_compilation_2.f90:185:16
    |
185 |     real(3) :: x
    |                ^ redeclaration
    |
110 |     integer, parameter :: x = 2
    |                           ~~~~~ original declaration

semantic error: Expected initialization expression for kind
   --> tests/errors/continue_compilation_2.f90:187:10
    |
187 |     real(*) kind2_a
    |          ^ 

semantic error: Parameter attribute cannot be used with Target attribute
   --> tests/errors/continue_compilation_2.f90:189:5
    |
189 |     integer, parameter, target :: foo=4
    |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ 

semantic error: Kind 16 is not supported for Real
   --> tests/errors/continue_compilation_2.f90:192:5
    |
192 |     real*16 :: unsupported_kind
    |     ^^^^^^^ 

semantic error: Argument was not specified
   --> tests/errors/continue_compilation_2.f90:194:33
    |
194 |     type(Circle) :: myCircle2 = Circle()
    |                                 ^^^^^^^^ Argument 'radius' not specified for circle

semantic error: Keyword argument not found
   --> tests/errors/continue_compilation_2.f90:196:33
    |
196 |     type(Circle) :: myCircle3 = Circle(mykeyword=10)
    |                                 ^^^^^^^^^^^^^^^^^^^^ 'mykeyword' keyword argument not found

semantic error: Incompatible ranks in assignment
   --> tests/errors/continue_compilation_2.f90:199:5
    |
199 |     integer, dimension(3,2) :: m = [ 1, 0, 0, 2, 4, 6 ]
    |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ 

semantic error: Unexpected args, SetExponent expects (real, int) as arguments
  --> tests/errors/continue_compilation_2.f90:36:18
   |
36 |         print *, set_exponent([1, 2, 3], 2)
   |                  ^^^^^^^^^^^^^^^^^^^^^^^^^^ 

semantic error: Cannot assign to an intent(in) variable `y`
  --> tests/errors/continue_compilation_2.f90:41:9
   |
41 |         y = 99  
   |         ^ 

semantic error: shape argument specified in c_f_pointer even though fptr is not an array.
   --> tests/errors/continue_compilation_2.f90:239:38
    |
239 |     call c_f_pointer(queries_1, y_1, [2])
    |                                      ^^^ 

semantic error: shape array passed to c_f_pointer must be of rank 1 but given rank is 2
   --> tests/errors/continue_compilation_2.f90:241:38
    |
241 |     call c_f_pointer(queries_2, y_2, shape)
    |                                      ^^^^^ 

semantic error: Cannot assign to a constant variable
   --> tests/errors/continue_compilation_2.f90:243:5
    |
243 |     x = 1
    |     ^^^^^ assignment here
    |
110 |     integer, parameter :: x = 2
    |                           ~~~~~ declared as constant

semantic error: More actual than formal arguments in procedure call
   --> tests/errors/continue_compilation_2.f90:246:33
    |
246 |     call myCircle%calculateArea(circleArea, 12)
    |                                 ^^^^^^^^^^^^^^ 

semantic error: Invalid argument `end` supplied
   --> tests/errors/continue_compilation_2.f90:248:5
    |
248 |     CLOSE(end=200)
    |     ^^^^^^^^^^^^^^ 

semantic error: The first argument of `cmplx` intrinsic must be present
   --> tests/errors/continue_compilation_2.f90:250:9
    |
250 |     a = cmplx(y = 2)
    |         ^^^^^^^^^^^^ 

semantic error: Coarrays are not supported yet
   --> tests/errors/continue_compilation_2.f90:256:11
    |
256 |     val = this_image ()
    |           ^^^^^^^^^^^^^ 

semantic error: Coarrays are not supported yet
   --> tests/errors/continue_compilation_2.f90:257:5
    |
257 |     call co_sum (val, result_image=1)
    |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ 

semantic error: Coarrays are not supported yet
   --> tests/errors/continue_compilation_2.f90:258:9
    |
258 |     if (this_image() == 1) then
    |         ^^^^^^^^^^^^ 

semantic error: Coarrays are not supported yet
   --> tests/errors/continue_compilation_2.f90:262:5
    |
262 |     call event_query(1, 1, 1)
    |     ^^^^^^^^^^^^^^^^^^^^^^^^^ 

semantic error: Operands of comparison operator are of different types
   --> tests/errors/continue_compilation_2.f90:266:9
    |
266 |     if (i > x_2) then
    |         ^^^^^^^ 

semantic error: dim has already been specified as a positional/keyword argument to size
   --> tests/errors/continue_compilation_2.f90:270:14
    |
270 |     size_a = size(a_2, 1, dim=1)
    |              ^^^^^^^^^^^^^^^^^^^ 

semantic error: dim has already been specified as a positional/keyword argument to size
   --> tests/errors/continue_compilation_2.f90:271:14
    |
271 |     size_a = size(a_2, dim = 1, 1)
    |              ^^^^^^^^^^^^^^^^^^^^^ 

semantic error: Only Integer literals or expressions which reduce to constant Integer are accepted as kind parameters.
   --> tests/errors/continue_compilation_2.f90:273:31
    |
273 |     size_a_2 = size(a_3, kind=kindvar, dim=1)
    |                               ^^^^^^^ 

semantic error: Only Integer literals or expressions which reduce to constant Integer are accepted as kind parameters.
   --> tests/errors/continue_compilation_2.f90:274:31
    |
274 |     size_a_2 = size(a_3, kind=kindvar)
    |                               ^^^^^^^ 

semantic error: Atomic operations are not supported yet
   --> tests/errors/continue_compilation_2.f90:276:5
    |
276 |     call atomic_add (atom[1], this_image())
    |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ 

semantic error: Atomic operations are not supported yet
   --> tests/errors/continue_compilation_2.f90:277:5
    |
277 |     call atomic_add (atom[2], this_image())
    |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ 

semantic error: Type-spec cannot contain an asterisk for a type parameter
   --> tests/errors/continue_compilation_2.f90:279:14
    |
279 |     print *, [character(*) :: "a", "b", "ball", "cat"]
    |              ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ 

semantic error: Different `character` lengths 1 and 4 in array constructor
   --> tests/errors/continue_compilation_2.f90:281:25
    |
281 |     print *, ["a", "b", "ball", "cat"]
    |                         ^^^^^^ 

semantic error: Different `character` lengths 2 and 5 in array constructor
   --> tests/errors/continue_compilation_2.f90:282:27
    |
282 |     print *, ["a1", "b1", "ball1", "cat1"]
    |                           ^^^^^^^ 

semantic error: Element in `real(8)` array constructor is `real(4)`
   --> tests/errors/continue_compilation_2.f90:285:20
    |
285 |     print *, [x_3, [1., 2.]]
    |                    ^^^^^^^^ 

semantic error: Element in `integer(4)` array constructor is `real(4)`
   --> tests/errors/continue_compilation_2.f90:287:18
    |
287 |     print *, [1, 2.]
    |                  ^^ 

semantic error: Element in `integer(4)` array constructor is `real(4)`
   --> tests/errors/continue_compilation_2.f90:289:18
    |
289 |     print *, [1, [1., 2.]]
    |                  ^^^^^^^^ 

semantic error: Argument of intrinsic must be an integer
   --> tests/errors/continue_compilation_2.f90:291:14
    |
291 |     print *, dfloat(y_3)
    |              ^^^^^^^^^^^ 

semantic error: Invalid argument type for `dim` or `mask`
   --> tests/errors/continue_compilation_2.f90:293:29
    |
293 |     print *, sum([1, 2, 3], 1.1)
    |                             ^^^ 

semantic error: `mask` argument to `Sum` must be a scalar or array of logical type
   --> tests/errors/continue_compilation_2.f90:295:32
    |
295 |     print *, sum([1, 2, 3], 1, 1.1)
    |                                ^^^ 

semantic error: `dim` argument to `Sum` must be a scalar and of integer type
   --> tests/errors/continue_compilation_2.f90:297:37
    |
297 |     print *, sum([1, 2, 3], .true., 1.1)
    |                                     ^^^ 

semantic error: Too many arguments to call `dint`
   --> tests/errors/continue_compilation_2.f90:299:13
    |
299 |     print*, dint(1.0_8, 8)
    |             ^^^^^^^^^^^^^^ 

semantic error: Too many arguments to call `dint`
   --> tests/errors/continue_compilation_2.f90:300:13
    |
300 |     if (abs(dint(1.0_8, 8) - 1.0_8) > 10e-5 ) error stop
    |             ^^^^^^^^^^^^^^ 

semantic error: Argument 1 of dlgama must be of double precision real type
   --> tests/errors/continue_compilation_2.f90:302:14
    |
302 |     print *, dlgama(2.7)
    |              ^^^^^^^^^^^ 

semantic error: Too many arguments to call `dnint`
   --> tests/errors/continue_compilation_2.f90:304:13
    |
304 |     print*, dnint(1.0_8, 8)
    |             ^^^^^^^^^^^^^^^ 

semantic error: Too many arguments to call `dnint`
   --> tests/errors/continue_compilation_2.f90:305:13
    |
305 |     if (abs(dnint(1.0_8, 8) - 1.0_8) > 10e-5 ) error stop
    |             ^^^^^^^^^^^^^^^ 

semantic error: Do concurrent loop variable `j` cannot be part of local expression
   --> tests/errors/continue_compilation_2.f90:307:30
    |
307 |     do concurrent (j = 1:Ny) local(i_1, j)
    |                              ^^^^^^^^^^^^^ 

semantic error: Assignment to loop variable `i_2` is not allowed
   --> tests/errors/continue_compilation_2.f90:314:9
    |
314 |         i_2 = j_1 + 1
    |         ^^^ 

semantic error: Step expression (Increment) in DO loop cannot be zero
   --> tests/errors/continue_compilation_2.f90:320:20
    |
320 |     do i_2 = 1, 5, 0
    |                    ^ 

semantic error: Arguments to dprod must be real(4)
   --> tests/errors/continue_compilation_2.f90:324:13
    |
324 |     print*, dprod(4.23_8, 4.3_8)
    |             ^^^^^^^^^^^^^^^^^^^^ 

semantic error: Unexpected args, Dreal expects (complex64) as arguments
   --> tests/errors/continue_compilation_2.f90:327:14
    |
327 |     print *, dreal(a_4)
    |              ^^^^^^^^^^ 

semantic error: Incorrect number of arguments passed to the 'complex' intrinsic. It accepts exactly 2 arguments.
   --> tests/errors/continue_compilation_2.f90:329:11
    |
329 |     a_5 = complex(1)
    |           ^^^^^^^^^^ 

semantic error: Argument of intrinsic must be an integer
   --> tests/errors/continue_compilation_2.f90:331:14
    |
331 |     print *, float(y_4)
    |              ^^^^^^^^^^ 

semantic error: Invalid argument `start` supplied
   --> tests/errors/continue_compilation_2.f90:333:5
    |
333 |     FLUSH(unit=10, start=100)
    |     ^^^^^^^^^^^^^^^^^^^^^^^^^ 

semantic error: Type mismatch in argument at argument (1); passed `real` to `integer`.
   --> tests/errors/continue_compilation_2.f90:335:16
    |
335 |     print *, f(42.9)
    |                ^^^^ 

semantic error: Argument to Ichar must have length one
   --> tests/errors/continue_compilation_2.f90:337:13
    |
337 |     print*, ichar("okay")
    |             ^^^^^^^^^^^^^ 

semantic error: first argument of `idint` must have kind equals to 8
   --> tests/errors/continue_compilation_2.f90:339:14
    |
339 |     print *, idint(4.5)
    |              ^^^^^^^^^^ 

semantic error: first argument of `ifix` must have kind equals to 4
   --> tests/errors/continue_compilation_2.f90:341:14
    |
341 |     print *, ifix(4.23_8)
    |              ^^^^^^^^^^^^ 

semantic error: Different shape for array assignment on dimension 1(1 and 3)
   --> tests/errors/continue_compilation_2.f90:344:5
    |
344 |     arr1 = [1, 2, 3]
    |     ^^^^^^^^^^^^^^^^ 

semantic error: Different shape for array assignment on dimension 3(1 and 2)
   --> tests/errors/continue_compilation_2.f90:348:5
    |
348 |     idaa2_y = idaa2_x
    |     ^^^^^^^^^^^^^^^^^ 

semantic error: Shapes for operands are not conformable
   --> tests/errors/continue_compilation_2.f90:350:14
    |
350 |     print *, idlalb1_x .neqv. [.true., .true.]
    |              ^^^^^^^^^        ^^^^^^^^^^^^^^^^ 

semantic error: Shapes for operands are not conformable
   --> tests/errors/continue_compilation_2.f90:352:14
    |
352 |     print *, idlalb2_x1 .neqv. idlalb2_x2
    |              ^^^^^^^^^^        ^^^^^^^^^^ 

semantic error: Incompatible ranks 2 and 1 in assignment
   --> tests/errors/continue_compilation_2.f90:354:5
    |
354 |     iraa1_arr1 = [1, 2, 3]
    |     ^^^^^^^^^^^^^^^^^^^^^^ 

semantic error: Incompatible ranks 1 and 3 in assignment
   --> tests/errors/continue_compilation_2.f90:356:5
    |
356 |     iraa2_arr3 = iraa2_arr1
    |     ^^^^^^^^^^^^^^^^^^^^^^^ 

semantic error: the first array argument to `where` must be of type logical
   --> tests/errors/continue_compilation_2.f90:358:11
    |
358 |     where([1, 2, 3, 4, 5]) iatw1_b = 1
    |           ^^^^^^^^^^^^^^^ 

semantic error: the first array argument to `where` must be of type logical
   --> tests/errors/continue_compilation_2.f90:363:11
    |
363 |     where(iatw2_i1) iatw2_b = 1
    |           ^^^^^^^^ 

semantic error: the argument to `where` must be an array
   --> tests/errors/continue_compilation_2.f90:367:11
    |
367 |     where(.true.) itw1_b = 12121
    |           ^^^^^^ 

semantic error: the argument to `where` must be an array
   --> tests/errors/continue_compilation_2.f90:370:11
    |
370 |     where(1) itw2_b = 12121
    |           ^ 

semantic error: the argument to `where` must be an array
   --> tests/errors/continue_compilation_2.f90:373:11
    |
373 |     where(max(1.33, 2.67)) itw3_b = 12121
    |           ^^^^^^^^^^^^^^^ 

semantic error: Unexpected args, Radix expects (int) or (real) as arguments
   --> tests/errors/continue_compilation_2.f90:379:14
    |
379 |     print *, radix((2.4, 1.0))
    |              ^^^^^^^^^^^^^^^^^ 

semantic error: datan2 was declared as a variable, it can't be called as a function
   --> tests/errors/continue_compilation_2.f90:383:14
    |
383 |     print *, datan2(x,y)
    |              ^^^^^^^^^^^ help: use the compiler option "--implicit-interface" to use intrinsic functions

semantic error: datan2 was declared as a variable, it can't be called as a function
   --> tests/errors/continue_compilation_2.f90:384:12
    |
384 |     if(abs(datan2(x,y) - 0.59941916594660438) > 1d-6) error stop
    |            ^^^^^^^^^^^ help: use the compiler option "--implicit-interface" to use intrinsic functions

semantic error: `pos` argument of `ibclr` intrinsic must be non-negative
   --> tests/errors/continue_compilation_2.f90:386:14
    |
386 |     print *, ibclr(1, -2)
    |              ^^^^^^^^^^^^ 

semantic error: Kind of all the arguments of Dshiftl must be the same
   --> tests/errors/continue_compilation_2.f90:388:14
    |
388 |     print *, dshiftl(1, 1_8, 1)
    |              ^^^^^^^^^^^^^^^^^^ 

semantic error: Kind of all the arguments of Ior must be the same
   --> tests/errors/continue_compilation_2.f90:390:14
    |
390 |     print *, ior(1, 1_8)
    |              ^^^^^^^^^^^ 

semantic error: Kind of all the arguments of Ieor must be the same
   --> tests/errors/continue_compilation_2.f90:392:14
    |
392 |     print *, ieor(1, 1_8)
    |              ^^^^^^^^^^^^ 

semantic error: Kind of all the arguments of Hypot must be the same
   --> tests/errors/continue_compilation_2.f90:394:14
    |
394 |     print *, hypot(1.0, 2.7_8)
    |              ^^^^^^^^^^^^^^^^^ 

semantic error: Kind of all the arguments of Ior must be the same
   --> tests/errors/continue_compilation_2.f90:396:14
    |
396 |     print *, ior(intr8_x, intr8_y)
    |              ^^^^^^^^^^^^^^^^^^^^^ 

semantic error: Kind of all the arguments of Iand must be the same
   --> tests/errors/continue_compilation_2.f90:398:14
    |
398 |     print *, iand(intr9_x, intr9_y)
    |              ^^^^^^^^^^^^^^^^^^^^^^ 

semantic error: Kind of all the arguments of Ieor must be the same
   --> tests/errors/continue_compilation_2.f90:400:14
    |
400 |     print *, ieor(intr10_x, intr10_y)
    |              ^^^^^^^^^^^^^^^^^^^^^^^^ 

semantic error: Kind of all the arguments of Hypot must be the same
   --> tests/errors/continue_compilation_2.f90:404:14
    |
404 |     print *, hypot(intr11_x, intr11_y)
    |              ^^^^^^^^^^^^^^^^^^^^^^^^^ 

semantic error: All arguments to max0 must be of the same type
   --> tests/errors/continue_compilation_2.f90:406:14
    |
406 |     print *, max(12, 13.94)
    |              ^^^^^^^^^^^^^^ 

semantic error: All arguments to min0 must be of the same type
   --> tests/errors/continue_compilation_2.f90:408:14
    |
408 |     print *, min(12, 13.94)
    |              ^^^^^^^^^^^^^^ 

semantic error: Unexpected args, Scale expects (real, int) as arguments
   --> tests/errors/continue_compilation_2.f90:410:14
    |
410 |     print *, scale([1, 2, 3], 2)
    |              ^^^^^^^^^^^^^^^^^^^ 

semantic error: Unexpected args, SetExponent expects (real, int) as arguments
   --> tests/errors/continue_compilation_2.f90:412:14
    |
412 |     print *, set_exponent([1, 2, 3], 2)
    |              ^^^^^^^^^^^^^^^^^^^^^^^^^^ 

semantic error: Non-variable expression for `iostat`
   --> tests/errors/continue_compilation_2.f90:415:5
    |
415 |     read(ici_buffer, *, iostat=ici_ios)
    |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ 

semantic error: `iostat` must be scalar
   --> tests/errors/continue_compilation_2.f90:418:5
    |
418 |     read(insv_buffer, *, iostat=insv_ios(1:1))
    |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ 

semantic error: The SHIFT argument must be less than or equal to the of SIZE argument
   --> tests/errors/continue_compilation_2.f90:420:14
    |
420 |     print *, ishftc(10, 6, 4)
    |              ^^^^^^^^^^^^^^^^ 

semantic error: The first argument of `cmplx` intrinsic is of complex type, the second argument in this case must be absent
   --> tests/errors/continue_compilation_2.f90:422:14
    |
422 |     print *, cmplx(complex_z , 1)
    |              ^^^^^^^^^^^^^^^^^^^^ 

semantic error: `kind` argument of `aint` intrinsic must be a scalar
   --> tests/errors/continue_compilation_2.f90:424:36
    |
424 |     print *, aint([1.0, 2.0, 3.0], [4, 4])
    |                                    ^^^^^^ 

semantic error: Type mismatch in assignment, the types must be compatible
   --> tests/errors/continue_compilation_2.f90:426:5
    |
426 |     tm1_x = "x"
    |     ^^^^^   ^^^ type mismatch (integer and string)

semantic error: Type mismatch in binary operator, the types must be compatible
   --> tests/errors/continue_compilation_2.f90:428:13
    |
428 |     tm2_x = 5 + "x"
    |             ^   ^^^ type mismatch (integer and string)

semantic error: Type mismatch in assignment, the types must be compatible
   --> tests/errors/continue_compilation_2.f90:428:5
    |
428 |     tm2_x = 5 + "x"
    |     ^^^^^       ^^^ type mismatch (integer and string)

semantic error: Variable 'foo' is not declared
   --> tests/errors/continue_compilation_2.f90:430:13
    |
430 |     print *,foo
    |             ^^^ 'foo' is undeclared

semantic error: Variable 'mycircle' doesn't have any member named, 'mymember'.
   --> tests/errors/continue_compilation_2.f90:435:14
    |
435 |     print *, myCircle%mymember
    |              ^^^^^^^^^^^^^^^^^ 
